# PureData

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  contributing.md  index.md  quickstart.md
example/: README.md  basic_auto_magic.py  batch_processing.py  cli_auto_magic.md  financial_fraud.py  gps_validation.py  large_dataset.py  merge_and_clean.py  quality_report.py  streaming_from_url.py  time_series_interpolation.py  yaml_config.py
src/: tcompat.py
src/pure_data/: __init__.py  cleaners.py  cli.py  contracts.py  engine.py  exceptions.py  io_adapter.py  profiling.py  reporting.py  rule_factory.py  utils.py
src/turboclean/: __init__.py  cleaners.py  cli.py  engine.py  exceptions.py  io_adapter.py  profiling.py  reporting.py
tests/: conftest.py  test_cleaners.py  test_cli.py  test_engine.py  test_io_adapter.py  test_profiling.py
