[tool.poetry]
name = "puredata"
version = "0.3.0"
description = "Ultra-fast, adaptive data purification engine handles 100+ GB files with zero-copy, lazy execution."
authors = ["Ali Khorasani <Alikhorasanishirehjeyni@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pure_data", from = "src" }]
include = ["README.md", "LICENSE", "benchmarks/"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.19.0"
pyarrow = "^14.0.0"
click = "^8.1.0"
rich = "^13.7.0"
pyyaml = "^6.0"
sqlalchemy = { version = "^2.0", optional = true }
openpyxl = { version = "^3.1.0", optional = true }

[tool.poetry.extras]
sql = ["sqlalchemy"]
excel = ["openpyxl"]
all = ["sqlalchemy", "openpyxl"]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pandas>=2.1.0",
    "pre-commit>=3.0",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.0"
ruff = "^0.1.0"
pandas = "^2.1.0" # for benchmarks only
ipython = { version = "^8.0", optional = true }
pre-commit = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
[[tool.mypy.overrides]]
module = "polars.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]   # handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
